--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="purple">#8a34ef</color>
+    <color name="whitepurple">#e8d9f2</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="red">#e74950</color>
 </resources>
