--- a/app/src/main/res/layout/join1.xml
+++ b/app/src/main/res/layout/join1.xml
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:backgroundTint="@color/purple"
+        android:textColor="@color/black"
         android:hint="성함을 입력해주세요"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="26sp"
@@ -45,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:backgroundTint="@color/purple"
+        android:textColor="@color/black"
         android:hint="돌보미 소속을 입력해주세요."
         android:textColorHint="@android:color/darker_gray"
         android:textSize="26sp"
@@ -56,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:backgroundTint="@color/purple"
+        android:textColor="@color/black"
         android:hint="돌보미 성함을 입력해주세요."
         android:textColorHint="@android:color/darker_gray"
         android:textSize="26sp"
