--- a/app/src/main/res/layout/join2.xml
+++ b/app/src/main/res/layout/join2.xml
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:backgroundTint="@color/purple"
+        android:textColor="@color/black"
         android:hint="010 - 0000 - 0000"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="26sp"
@@ -45,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:backgroundTint="@color/purple"
+        android:textColor="@color/black"
         android:hint="비밀번호를 생성해주세요"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="26sp"
