--- a/app/src/main/res/layout/join1.xml
+++ b/app/src/main/res/layout/join1.xml
@@ -36,6 +36,7 @@
         android:backgroundTint="@color/purple"
         android:textColor="@color/black"
         android:hint="성함을 입력해주세요"
+        android:text="이재학"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="26sp"
         android:textStyle="bold" />
@@ -48,6 +49,7 @@
         android:backgroundTint="@color/purple"
         android:textColor="@color/black"
         android:hint="돌보미 소속을 입력해주세요."
+        android:text="성남시"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="26sp"
         android:textStyle="bold" />
@@ -60,6 +62,7 @@
         android:backgroundTint="@color/purple"
         android:textColor="@color/black"
         android:hint="돌보미 성함을 입력해주세요."
+        android:text="신민재"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="26sp"
         android:textStyle="bold" />
