--- a/app/src/main/res/layout/join2.xml
+++ b/app/src/main/res/layout/join2.xml
@@ -32,10 +32,12 @@
         android:id="@+id/join2_phonenum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="phone"
         android:layout_margin="20dp"
         android:backgroundTint="@color/purple"
         android:textColor="@color/black"
         android:hint="010 - 0000 - 0000"
+        android:text="010-6124-7134"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="26sp"
         android:textStyle="bold" />
@@ -48,6 +50,7 @@
         android:backgroundTint="@color/purple"
         android:textColor="@color/black"
         android:hint="비밀번호를 생성해주세요"
+        android:text="1234"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="26sp"
         android:textStyle="bold" />
