--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -63,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12sp"
-        android:text="김말년 어르신"
+        android:text="이재학 어르신"
         android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
